--- a/Crypto-app/package.json
+++ b/Crypto-app/package.json
@@ -17,6 +17,10 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^7.1.7"
+    "electron": "^7.1.7",
+    "electron-reload": "^1.5.0"
+  },
+  "dependencies": {
+    "axios": "^0.19.0"
   }
 }
